Update and rename tomorrow.mdx to weekend.mdx

--- a/weekend.mdx
+++ b/weekend.mdx
@@ -1,10 +1,11 @@
 ---
-title: 'Post for the Tomorrow'
+title: 'Post for the Weekend'
 date: '2023-05-03'
 tags: ['next.js','nextjs','stuff']
 ---
 
 <Video id="6h649f2fB9Q" />
+
 
 # Hello!
 
